--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.2.4",
     "postcss": "^8.4.21",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.3"
