--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@headlessui/react": "^1.7.17",
+    "@next/bundle-analyzer": "^13.5.4",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -19,7 +20,10 @@
     "emailjs-com": "^3.2.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "firebase": "^10.4.0",
+    "firestore": "^1.1.6",
     "next": "13.2.4",
+    "next-optimized-images": "^2.6.2",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
