--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "firestore": "^1.1.6",
     "next": "13.2.4",
     "next-optimized-images": "^2.6.2",
+    "paramall-wheel-of-fortune": "^1.1.4",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-spinning-wheel": "^2.1.0",
+    "react-wheel-of-prizes": "^1.1.0",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.3"
   }
